--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,4 +1,36 @@
+@use 'variables.scss';
+
 .App {
+	width: 100%;
+	overflow-x: hidden;
+	background-color: variables.$background;
 	margin: 0;
 	padding: 0;
+	min-height: 100vh;
+}
+
+.item-form {
+	width: 30%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	color: variables.$background;
+	background-color: variables.$main;
+	border-radius: variables.$border-rad;
+	&__label {
+		font-size: 1.2rem;
+		font-weight: 700;
+	}
+	&__input {
+		width: 50%;
+		margin: 5px 0;
+		padding: 5px;
+		border-radius: variables.$border-rad;
+	}
+	&__button {
+		width: 50%;
+		margin: 5px 0;
+		padding: 5px;
+		border-radius: variables.$border-rad;
+	}
 }
