--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -7,6 +7,11 @@
 	margin: 0;
 	padding: 0;
 	min-height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	//justify-content: center;
 }
 
 .item-form {
@@ -17,6 +22,8 @@
 	color: variables.$background;
 	background-color: variables.$main;
 	border-radius: variables.$border-rad;
+	padding: 10px 0;
+	margin: 10px 0;
 	&__label {
 		font-size: 1.2rem;
 		font-weight: 700;
@@ -36,6 +43,11 @@
 }
 
 .item-list {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 	&__header {
 		font-size: 1.5rem;
 		font-weight: 700;
@@ -43,12 +55,22 @@
 	}
 	&__list {
 		list-style: none;
+		width: 50%;
 		&_item {
 			margin: 5px 0;
 			border: 1px solid variables.$main;
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			&_property {
+				color: variables.$main;
+				font-weight: 500;
+				margin: 5px 5px;
+			}
 			&_link {
 				text-decoration: none;
 				color: variables.$main;
+				font-style: italic;
 			}
 		}
 	}
