feat: add admin panel
styles: update styles for admin page

--- a/client/src/style/_variables.scss
+++ b/client/src/style/_variables.scss
@@ -1,3 +1,5 @@
 $background: rgb(231, 240, 240);
 $main: rgb(66, 31, 112);
 $border-rad: 15px;
+$link: rgb(150, 228, 228);
+$link-hover: rgb(150, 197, 228);
