--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,4 +1,5 @@
 @use 'variables.scss';
+@use 'views/admin.scss';
 
 .App {
 	width: 100%;
@@ -11,7 +12,6 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	//justify-content: center;
 }
 
 .item-form {
@@ -75,3 +75,5 @@
 		}
 	}
 }
+
+@include admin.admin-main;
