--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,5 +1,6 @@
 @use 'variables.scss';
 @use 'views/admin.scss';
+@use 'partials/navbar';
 
 .App {
 	width: 100%;
@@ -14,33 +15,7 @@
 	align-items: center;
 }
 
-.item-form {
-	width: 30%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	color: variables.$background;
-	background-color: variables.$main;
-	border-radius: variables.$border-rad;
-	padding: 10px 0;
-	margin: 10px 0;
-	&__label {
-		font-size: 1.2rem;
-		font-weight: 700;
-	}
-	&__input {
-		width: 50%;
-		margin: 5px 0;
-		padding: 5px;
-		border-radius: variables.$border-rad;
-	}
-	&__button {
-		width: 50%;
-		margin: 5px 0;
-		padding: 5px;
-		border-radius: variables.$border-rad;
-	}
-}
+@include navbar.navbar-main;
 
 .item-list {
 	width: 100%;
