--- a/client/src/style/views/_admin.scss
+++ b/client/src/style/views/_admin.scss
@@ -30,6 +30,33 @@
 		}
 		&__area {
 			width: 75%;
+			&__item-form {
+				width: 30%;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				color: variables.$background;
+				background-color: variables.$main;
+				border-radius: variables.$border-rad;
+				padding: 10px 0;
+				margin: 10px 0;
+				&_label {
+					font-size: 1.2rem;
+					font-weight: 700;
+				}
+				&_input {
+					width: 50%;
+					margin: 5px 0;
+					padding: 5px;
+					border-radius: variables.$border-rad;
+				}
+				&_button {
+					width: 50%;
+					margin: 5px 0;
+					padding: 5px;
+					border-radius: variables.$border-rad;
+				}
+			}
 		}
 	}
 }
