--- a/client/src/style/App.scss
+++ b/client/src/style/App.scss
@@ -1,6 +1,7 @@
 @use 'variables.scss';
 @use 'views/admin.scss';
-@use 'partials/navbar';
+@use 'partials/navbar.scss';
+@use 'views/home.scss';
 
 .App {
 	width: 100%;
@@ -52,3 +53,4 @@
 }
 
 @include admin.admin-main;
+@include home.home-main;
