--- a/client/src/style/views/_admin.scss
+++ b/client/src/style/views/_admin.scss
@@ -56,6 +56,13 @@
 					padding: 5px;
 					border-radius: variables.$border-rad;
 				}
+				&_textarea {
+					width: 80%;
+					margin: 5px 0;
+					padding: 5px;
+					min-height: 400px;
+					border-radius: variables.$border-rad;
+				}
 				&_button {
 					width: 50%;
 					margin: 5px 0;
